# HA-S_BUS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_PROTOCOL_GUIDE.md  README.md  Saia S-Bus Protokoll und Auto-Konfiguration.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: release.yaml  validate.yaml
custom_components/sbus/: __init__.py  binary_sensor.py  config_flow.py  config_flow_old.py  const.py  coordinator.py  ether_sbus.py  manifest.json  profi_sbus.py  sbus_protocol.py  sbus_protocol_base.py  sensor.py  serial_sbus.py  services.yaml  strings.json  switch.py
docs/: DEVELOPMENT.md  PROTOCOL.md
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sbus_protocol.py  test_sbus_protocol_advanced.py  test_sensor.py  test_switch.py
